apps/graduation/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-dep
  namespace: graduation-gateway
  labels:
    app: gateway-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8033"
    spec:
      containers:
        - name: gateway-service
          image: ghcr.io/dan9191/graduation-work/gateway:5b48174f67dbd1a9be1694587769a4e20903633e
          imagePullPolicy: Always
          ports:
            - containerPort: 8033
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8033
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8033
            initialDelaySeconds: 30
            periodSeconds: 10
