apps/graduation/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: graduation-gateway
  labels:
    app: gateway-service
spec:
  type: ClusterIP
  ports:
    - port: 8033
      targetPort: 8033
      protocol: TCP
      name: http
  selector:
    app: gateway-service
